--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins  {
+plugins {
     id 'java'
 }
 
@@ -6,9 +6,17 @@ repositories {
     mavenCentral()
 }
 
+
+def junitVersion = '5.9.2'
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.36'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.assertj:assertj-core:3.22.0'
+    implementation 'com.google.guava:guava:31.1-jre'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
